# quantum_proof

./: .gitignore  README.md  index.html
.github/workflows/: benchmark.yml  code-quality.yml  curve-verification.yml  deploy-pages.yml  functional-tests.yml  qiskit-nisq.yml  quantum-deploy.yml  unit-tests.yml
notebook/: quantum_verification_walkthrough.ipynb
oathbreaker/: Cargo.toml  LICENSE  README.md
oathbreaker/crates/benchmark/: Cargo.toml
oathbreaker/crates/benchmark/src/: comparison.rs  counter.rs  main.rs  oath_tiers.rs  params.rs  scaling.rs
oathbreaker/crates/ec-goldilocks/: Cargo.toml
oathbreaker/crates/ec-goldilocks/src/: curve.rs  double_scalar_mul.rs  ecdlp.rs  lib.rs  params.rs  point_ops.rs  test_case.rs  tests.rs
oathbreaker/crates/ec-oath/: Cargo.toml
oathbreaker/crates/ec-oath/src/: curve.rs  double_scalar_mul.rs  lib.rs  params.rs  point_ops.rs  point_ops_generic.rs  tests.rs
oathbreaker/crates/goldilocks-field/: Cargo.toml
oathbreaker/crates/goldilocks-field/src/: constants.rs  field.rs  field_tests.rs  lib.rs
oathbreaker/crates/group-action-circuit/: Cargo.toml
oathbreaker/crates/group-action-circuit/src/: continued_fraction.rs  double_scalar.rs  export.rs  lib.rs  measurement.rs  precompute.rs  qft.rs  qft_stub.rs  quantum_gate.rs  scalar_mul.rs  scalar_mul_jacobian.rs  scalar_mul_jacobian_v3.rs  shor.rs  tests.rs  wnaf.rs
oathbreaker/crates/oath-field/: Cargo.toml
oathbreaker/crates/oath-field/src/: field.rs  lib.rs  prime_field.rs
oathbreaker/crates/reversible-arithmetic/: Cargo.toml
oathbreaker/crates/reversible-arithmetic/src/: adder.rs  ancilla.rs  ec_add_affine.rs  ec_add_jacobian.rs  ec_double_affine.rs  ec_double_jacobian.rs  ec_double_jacobian_v3.rs  gates.rs  inverter.rs  lib.rs  montgomery.rs  multiplier.rs  register.rs  resource_counter.rs  tests.rs
oathbreaker/crates/shor-circuit/: Cargo.toml
oathbreaker/crates/shor-circuit/src/: export.rs  lib.rs  phase_estimation.rs  precompute.rs  qft.rs  scalar_mul.rs  shor.rs  tests.rs
oathbreaker/crates/sp1-host/: Cargo.toml  build.rs
oathbreaker/crates/sp1-host/src/: main.rs
oathbreaker/crates/sp1-program/: Cargo.toml
oathbreaker/crates/sp1-program/src/: main.rs
oathbreaker/docs/: ARCHITECTURE.md  BENCHMARKING.md  CIRCUIT_ARCHITECTURE.md  COMPARISON.md  HARDWARE_DEPLOYMENT.md  HONEST_IMPLEMENTATION_ROADMAP.md  LIMITATIONS.md  NISQ_ROADMAP.md  OATH_TIERS.md  V3_OPTIMIZATIONS.md  VERIFICATION.md  ZKP_GUIDE.md
oathbreaker/docs/paper/: main.tex  references.bib
oathbreaker/proofs/: README.md
oathbreaker/qiskit/: README.md  backends.py  compilers.py  measure_gate_count.py  modular_adders.py  oath4.py  oath4_circuit.py  oath4_optimized.py  oathN_hardware_runner.py  oath_curve.py  run_ibm.py  run_simulator.py  test_oath4.py
oathbreaker/qiskit/poc/: README.md  measure_gate_count.py  oath4.py  oath4_circuit.py  oath4_optimized.py  oathN_circuit.py  oath_curve.py  requirements.txt  run_ibm.py  run_simulator.py  test_compilers.py  test_oath4.py  test_oathN.py
oathbreaker/sage/: README.md  VERIFY_CURVES.md  generate_curve.sage  generate_oath_curves.py  oath16_params.json  oath32_params.json  oath4_params.json  oath64_params.json  oath8_params.json  oath_all_params.json  validate_params.sage  verify_all_oath_curves.sage  verify_order.sage
oathbreaker/scripts/: export_qasm.sh  full_pipeline.sh  run_benchmarks.sh
site/: .gitignore  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
site/public/: CNAME  robots.txt
site/scripts/: sync-docs.mjs
site/src/components/: AttackCalculator.tsx  CIBadges.astro  DocSidebar.astro  Footer.astro  Hero.astro  Nav.astro  PipelineDiagram.tsx  ScalingCalculator.tsx  StatCard.astro  ThemeToggle.tsx
site/src/content/: config.ts
site/src/layouts/: Base.astro  DocPage.astro
site/src/pages/: 404.astro  about.astro  ci.astro  index.astro  nisq.astro  notebook.astro  oathbreaker.astro  results.astro  threat.astro  zkp.astro
site/src/pages/docs/: [slug].astro  index.astro
site/src/styles/: global.css
