[workspace]
resolver = "2"
members = [
    "crates/goldilocks-field",
    "crates/ec-goldilocks",
    "crates/reversible-arithmetic",
    "crates/group-action-circuit",
    "crates/sp1-program",
    "crates/sp1-host",
    "crates/benchmark",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/chippr-robotics/quantum_proof"

[workspace.dependencies]
goldilocks-field = { path = "crates/goldilocks-field" }
ec-goldilocks = { path = "crates/ec-goldilocks" }
reversible-arithmetic = { path = "crates/reversible-arithmetic" }
group-action-circuit = { path = "crates/group-action-circuit" }
sha2 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
clap = { version = "4", features = ["derive"] }
sp1-zkvm = "6.0.0"
sp1-sdk = "6.0.0"
sp1-build = "6.0.0"
