[package]
name = "ec-goldilocks"
description = "Elliptic curve operations over GF(p) with ECDLP solvers (Pollard rho, BSGS, brute force)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
goldilocks-field = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
