[package]
name = "ec-oath"
description = "Elliptic-curve operations for the Oathbreaker Oath family, with ECDLP solvers (Pollard rho, BSGS, brute force)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oath-field = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
