[package]
name = "goldilocks-field"
description = "GF(p) arithmetic for the Goldilocks prime p = 2^64 - 2^32 + 1"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
