[package]
name = "group-action-circuit"
description = "Coherent double-scalar group-action map [a]G + [b]Q for Shor's ECDLP algorithm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oath-field = { workspace = true }
ec-oath = { workspace = true }
reversible-arithmetic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
proptest = { workspace = true }
