[package]
name = "reversible-arithmetic"
description = "Reversible (quantum-compatible) gate circuits: adders, multipliers, inverters, EC point ops"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oath-field = { workspace = true }
ec-oath = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
