[package]
name = "sp1-host"
description = "SP1 host program: proof generation, classical verification, and artifact output"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# sp1-sdk = "4"  # Uncomment when SP1 toolchain is installed
goldilocks-field = { workspace = true }
ec-goldilocks = { workspace = true }
group-action-circuit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
