[package]
name = "sp1-program"
description = "SP1 guest program: group-action circuit execution proven inside the zkVM"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sp1-zkvm = { workspace = true, optional = true }
oath-field = { workspace = true }
ec-oath = { workspace = true }
reversible-arithmetic = { workspace = true }
group-action-circuit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[features]
default = []
sp1 = ["dep:sp1-zkvm"]
